JPAQueryBuilder: minor cleanup+optimisations. Improves perf of IN for String args, but also allocates memory better for any converted IN case